@@ -28,7 +28,6 @@ import carpet.script.value.StringValue;
 import carpet.script.value.Value;
 import carpet.script.value.ValueConversions;
 
-import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import it.unimi.dsi.fastutil.longs.Long2ObjectOpenHashMap;
 import it.unimi.dsi.fastutil.longs.LongSet;
 import net.minecraft.Util;
@@ -79,9 +78,7 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import net.minecraft.commands.arguments.item.ItemInput;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.Tag;
 import net.minecraft.network.protocol.game.ClientboundExplodePacket;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.SoundSource;
@@ -167,7 +164,7 @@ public class WorldAccess
         {
             throw new InternalExpressionException("'" + name + "' requires at least one parameter");
         }
-        if (params.get(0) instanceof final BlockValue bv)
+        if (params.getFirst() instanceof final BlockValue bv)
         {
             return BooleanValue.of(test.test(bv.getBlockState(), bv.getPos()));
         }
@@ -187,7 +184,7 @@ public class WorldAccess
         {
             throw new InternalExpressionException("'" + name + "' requires at least one parameter");
         }
-        if (params.get(0) instanceof final BlockValue bv)
+        if (params.getFirst() instanceof final BlockValue bv)
         {
             return StringValue.of(test.apply(bv.getBlockState(), bv.getPos()));
         }
@@ -207,7 +204,7 @@ public class WorldAccess
         {
             throw new InternalExpressionException("'" + name + "' requires at least one parameter");
         }
-        if (params.get(0) instanceof final BlockValue bv)
+        if (params.getFirst() instanceof final BlockValue bv)
         {
             try
             {
@@ -442,7 +439,7 @@ public class WorldAccess
                 return new StringValue(world.isThundering() ? "thunder" : (world.isRaining() ? "rain" : "clear"));
             }
 
-            Value weather = lv.get(0);
+            Value weather = lv.getFirst();
             ServerLevelData worldProperties = Vanilla.ServerLevel_getWorldProperties(world);
             if (lv.size() == 1)
             {
@@ -580,7 +577,7 @@ public class WorldAccess
 
         expression.addContextFunction("top", -1, (c, t, lv) ->
         {
-            String type = lv.get(0).getString().toLowerCase(Locale.ROOT);
+            String type = lv.getFirst().getString().toLowerCase(Locale.ROOT);
             Heightmap.Types htype = switch (type)
             {
                 //case "light": htype = Heightmap.Type.LIGHT_BLOCKING; break;  //investigate
@@ -723,7 +720,7 @@ public class WorldAccess
         {
             if (Carpet.getImpendingFillSkipUpdates().get())
             {
-                return lv.get(0);
+                return lv.getFirst();
             }
             Value[] result = new Value[]{Value.NULL};
             ((CarpetContext) c).server().executeBlocking(() ->
@@ -733,7 +730,7 @@ public class WorldAccess
                 try
                 {
                     skipUpdates.set(true);
-                    result[0] = lv.get(0).evalValue(c, t);
+                    result[0] = lv.getFirst().evalValue(c, t);
                 }
                 finally
                 {
@@ -759,7 +756,7 @@ public class WorldAccess
                 {
                     args.add(lv.get(i));
                 }
-                if (args.get(0) instanceof final ListValue list)
+                if (args.getFirst() instanceof final ListValue list)
                 {
                     if (args.size() == 2 && NBTSerializableValue.fromValue(args.get(1)) instanceof final NBTSerializableValue nbtsv)
                     {
@@ -767,7 +764,7 @@ public class WorldAccess
                     }
                     args = list.getItems();
                 }
-                else if (args.get(0) instanceof final MapValue map)
+                else if (args.getFirst() instanceof final MapValue map)
                 {
                     if (args.size() == 2 && NBTSerializableValue.fromValue(args.get(1)) instanceof final NBTSerializableValue nbtsv)
                     {
@@ -967,7 +964,7 @@ public class WorldAccess
             }
             CarpetContext cc = (CarpetContext) c;
             Level world = cc.level();
-            Value entityValue = lv.get(0);
+            Value entityValue = lv.getFirst();
             if (!(entityValue instanceof final EntityValue ev))
             {
                 return Value.FALSE;
@@ -1108,7 +1105,7 @@ public class WorldAccess
                 throw new InternalExpressionException("'place_item' takes at least 2 parameters: item and block, or position, to place onto");
             }
             CarpetContext cc = (CarpetContext) c;
-            String itemString = lv.get(0).getString();
+            String itemString = lv.getFirst().getString();
             Vector3Argument locator = Vector3Argument.findIn(lv, 1);
             ItemStack stackArg = NBTSerializableValue.parseItem(itemString, cc.registryAccess());
             BlockPos where = BlockPos.containing(locator.vec);
@@ -1228,7 +1225,7 @@ public class WorldAccess
             {
                 return ListValue.wrap(blocks.holders().map(blockReference -> ValueConversions.of(blockReference.key().location())));
             }
-            ResourceLocation tag = InputValidator.identifierOf(lv.get(0).getString());
+            ResourceLocation tag = InputValidator.identifierOf(lv.getFirst().getString());
             Optional<HolderSet.Named<Block>> tagset = blocks.getTag(TagKey.create(Registries.BLOCK, tag));
             return tagset.isEmpty() ? Value.NULL : ListValue.wrap(tagset.get().stream().map(b -> ValueConversions.of(blocks.getKey(b.value()))));
         });
@@ -1263,7 +1260,7 @@ public class WorldAccess
             Biome biome;
             BiomeSource biomeSource = world.getChunkSource().getGenerator().getBiomeSource();
             if (lv.size() == 1
-                    && lv.get(0) instanceof final MapValue map
+                    && lv.getFirst() instanceof final MapValue map
                     && biomeSource instanceof final MultiNoiseBiomeSource mnbs
             )
             {
@@ -1464,7 +1461,7 @@ public class WorldAccess
             }
             if (singleOutput)
             {
-                StructureStart start = FeatureGenerator.shouldStructureStartAt(world, pos, structure.get(0), needSize);
+                StructureStart start = FeatureGenerator.shouldStructureStartAt(world, pos, structure.getFirst(), needSize);
                 return start == null ? Value.NULL : !needSize ? Value.TRUE : ValueConversions.of(start, cc.registryAccess());
             }
             Map<Value, Value> ret = new HashMap<>();
@@ -1591,7 +1588,7 @@ public class WorldAccess
             if (lv.size() == 1)
             {
                 //either one block or list of chunks
-                Value first = lv.get(0);
+                Value first = lv.getFirst();
                 if (first instanceof final ListValue list)
                 {
                     List<Value> listVal = list.getItems();
