@@ -58,14 +58,14 @@ public class ControlFlow
             }
             if (lv.size() % 2 == 1)
             {
-                Value ret = lv.get(lv.size() - 1).evalValue(c, t);
+                Value ret = lv.getLast().evalValue(c, t);
                 return (cc, tt) -> ret;
             }
             return (cc, tt) -> Value.NULL;
         });
 
         expression.addImpureFunction("exit", lv -> {
-            throw new ExitStatement(lv.isEmpty() ? Value.NULL : lv.get(0));
+            throw new ExitStatement(lv.isEmpty() ? Value.NULL : lv.getFirst());
         });
 
         expression.addImpureFunction("throw", lv ->
@@ -75,7 +75,7 @@ public class ControlFlow
                 case 0 -> throw new ThrowStatement(Value.NULL, Throwables.USER_DEFINED);
                 case 1 -> throw new ThrowStatement(lv.get(0), Throwables.USER_DEFINED);
                 case 2 -> throw new ThrowStatement(lv.get(1), Throwables.getTypeForException(lv.get(0).getString()));
-                case 3 -> throw new ThrowStatement(lv.get(2), Throwables.getTypeForException(lv.get(1).getString()), lv.get(0).getString());
+                case 3 -> throw new ThrowStatement(lv.get(2), Throwables.getTypeForException(lv.get(1).getString()), lv.getFirst().getString());
                 default -> throw new InternalExpressionException("throw() can't accept more than 3 parameters");
             }
         });
@@ -89,7 +89,7 @@ public class ControlFlow
             }
             try
             {
-                Value retval = lv.get(0).evalValue(c, t);
+                Value retval = lv.getFirst().evalValue(c, t);
                 return (ct, tt) -> retval;
             }
             catch (ProcessedThrowStatement ret)
